# rust_actix_mogo

./: Cargo.toml
actix_ws/: Cargo.toml
actix_ws/src/: main.rs
mongo_lib/: Cargo.toml
mongo_lib/src/: error.rs  lib.rs
mongo_lib/src/mongo/: mongo_any.rs
