[package]
name = "mongo_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="*"
futures="*"
serde_json = "*"
chrono = "0.4.10"
bson = { version = "2.3.0",features = ["chrono-0_4"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["async-std-runtime"]